Regression(r278179): m_serverLock is still held after WebIDBServer is destroyed https://bugs.webkit.org/show_bug.cgi?id=226389

Reviewed by Chris Dumez.

* NetworkProcess/IndexedDB/WebIDBServer.cpp:
(WebKit::WebIDBServer::close):


Canonical link: https://commits.webkit.org/238264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278226 268f45cc-cd09-0410-ab3c-d52691b4dbfc